fixed card spacing

--- a/styles.css
+++ b/styles.css
@@ -38,22 +38,23 @@
 
 #card2{
   position: absolute;
-  top: 260px;
+  top: 651px;
   width: 1222px;
+  height: 90px;
   background-color: rgb(255, 138, 144);
 
 }
 
 #card3{
   position: absolute;
-  top: 700px;
+  top: 770px;
   width: 1222px;
   background-color: rgb(145, 250, 145);
 }
 
 #card4{
   position: absolute;
-  top: 900px;
+  top: 897px;
   width: 1222px;
   background-color: rgb(252, 206, 121);
 }
